# wyoming-piper-normalize

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
wyoming_piper_normalize/: __init__.py  __main__.py  handler.py  normalizer.py  piper_tts.py  voices.json
